base before bootstrap

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
   </head>
 
   <body>
+    <%= link_to "Home", root_path %>
+    <%= link_to "page2", page2_path %>
+    <%= link_to "page3", page3_path %>
     <%= yield %>
   </body>
 </html>
