--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,18 +1,39 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Project3</title>
+    <title>HutchTec</title>
     <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <%= link_to "Home", root_path %>
-    <%= link_to "page2", page2_path %>
-    <%= link_to "page3", page3_path %>
+
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+      <div class="container">
+        <%= link_to "HutchTec", root_path, class: "navbar-brand" %>
+        <ul class="navbar-nav">
+          <li class="nav-item"><%= link_to "Home", root_path, class: "nav-link" %></li>
+          <li class="nav-item"><%= link_to "Get Social", page2_path, class: "nav-link" %></li>
+          <li class="nav-item"><%= link_to "Profile", page3_path, class: "nav-link" %></li>
+        </ul>
+      </div>
+    </nav>
+
+    <!-- Page Content -->
     <%= yield %>
+    
+    <!-- Footer -->
+    <footer class="small text-muted">
+      <div class="container">
+        <hr>
+        <center>
+          <p>© 2018 HutchTec</p>
+        </center>
+      </div>
+    </footer>
+
   </body>
 </html>
