--- a/app/views/pages/page2.html.erb
+++ b/app/views/pages/page2.html.erb
@@ -1,4 +1,10 @@
 
+<div class="jumbotron">
+    <div class="container">
+        <h1>Get Social</h1>
+        
+    </div>
+</div>
 
-<h1>page2</h1>
-<p>text here</p>
+<html> <a class="twitter-timeline" data-width="350" data-height="600" href="https://twitter.com/HutchTim?ref_src=twsrc%5Etfw">Tweets by HutchTim</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+</html>
