--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,9 +18,24 @@
           <li class="nav-item"><%= link_to "Home", root_path, class: "nav-link" %></li>
           <li class="nav-item"><%= link_to "Get Social", page2_path, class: "nav-link" %></li>
           <li class="nav-item"><%= link_to "Profile", page3_path, class: "nav-link" %></li>
+
+          <% if user_signed_in? %>
+           <li class="nav-item pull-md-right"><%= link_to "Log Out",
+           signout_path, method: :delete, class: "nav-link" %></li>
+           <% else %>
+             <li class="nav-item pull-md-right"><%= link_to "Sign In",
+               signin_path, class: "nav-link" %></li>
+           <li class="nav-item pull-md-right"><%= link_to "Sign Up",
+               signup_path, class: "nav-link btn btn-primary" %></li>
+           <% end %>
         </ul>
       </div>
     </nav>
+    <!-- Flash Messages -->
+  <% flash.each do |name, message| %>
+    <%= content_tag(:div, message, class: "alert alert #{name}") %>
+  <% end %>
+
 
     <!-- Page Content -->
     <%= yield %>
