--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>HutchTec</title>
+    <title>Project Rails</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -11,14 +11,14 @@
   <body>
 
     <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark">
       <div class="container">
-        <%= link_to "HutchTec", root_path, class: "navbar-brand" %>
+        <%= link_to "Project Rails", root_path, class: "navbar-brand" %>
         <ul class="navbar-nav">
           <li class="nav-item"><%= link_to "Home", root_path, class: "nav-link" %></li>
-          <li class="nav-item"><%= link_to "Get Social", page2_path, class: "nav-link" %></li>
-          <li class="nav-item"><%= link_to "Profile", page3_path, class: "nav-link" %></li>
-
+          <li class="nav-item"><%= link_to "About", about_path, class: "nav-link" %></li>
+          <li class="nav-item"><%= link_to "Profile", profile_path, class: "nav-link" %></
+         li>
           <% if user_signed_in? %>
            <li class="nav-item pull-md-right"><%= link_to "Log Out",
            signout_path, method: :delete, class: "nav-link" %></li>
@@ -31,11 +31,11 @@
         </ul>
       </div>
     </nav>
-    <!-- Flash Messages -->
-  <% flash.each do |name, message| %>
-    <%= content_tag(:div, message, class: "alert alert #{name}") %>
-  <% end %>
 
+    <!-- Flash Messages -->
+    <% flash.each do |name, message| %>
+    <%= content_tag(:div, message, class: "alert alert #{name}") %>
+    <% end %>
 
     <!-- Page Content -->
     <%= yield %>
@@ -45,10 +45,11 @@
       <div class="container">
         <hr>
         <center>
-          <p>© 2018 HutchTec</p>
+          <p>© HutchTec Design</p>
         </center>
       </div>
     </footer>
 
   </body>
 </html>
+
