tweet styling done

--- a/app/views/pages/contactus.html.erb
+++ b/app/views/pages/contactus.html.erb
@@ -9,5 +9,5 @@
 <h2>HutchTec Project Rails</h2>
 <p>Phone: 0498244903</p>
 <p>Email: tim.hutch.work@gmail.com</p>
-<p></p>
+<p>I will add a new Twitter handle in future and review this training sessions</p>
 
