--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,7 +1,7 @@
 <% if user_signed_in? %>
     <div class="jumbotron jumbotron-home">
         <div class="container">
-            <h1>Welcome Back!</h1>
+            <h1>{first name}Welcome Back!</h1>
         </div>
     </div>
 <% else %>
