--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <%= form_with(model: tweet, local: true) do |form| %>
   <% if tweet.errors.any? %>
     <div id="error_explanation">
@@ -21,4 +22,5 @@
  
     <%= form.submit class: "btn btn-primary" %>
   <% end%>
+</div>
 
