finished editing tweets users

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -18,7 +18,7 @@
   <tbody>
     <% @items.each do |item| %>
       <tr>
-        <td><%= current_user.email %></td>
+        <td><%= current_user.username %></td>
         <td><%= item.title %></td>
         <td><%= item.url %></td>
         <td><%= item.text %></td>
