--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -18,9 +18,16 @@
     <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control", placeholder: "Confirm Password" %>
   </div>
 
-
+<div class="form-group">
+    <%= f.label :username %>
+    <%= f.text_field :username, autofocus: true, class: "form-control", placeholder: "minimum 6 lowecase" %>
+  </div>
   
-
+<div class="form-group">
+    <%= f.label :name %>
+    <%= f.text_field :name, autofocus: true, class: "form-control", placeholder: "John Smith" %>
+  </div>
+  <% end %>
   <%= f.submit "Sign up", class: "btn btn-primary" %>
 <% end %>
 
