--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -4,7 +4,7 @@
     <div class="col-md-4">
     <div class="card card-block">
     <h4 class="card-title">Your Account</h4>
-    <p class="card-text"><%= current_user.username %></p>
+    <p class="card-text"><%= current_user.email %></p>
    
   </div>
 </div>
@@ -18,11 +18,11 @@
     <li class="list-group-item">
       <%= link_to tweet, class: "list-group-item list-group-item-action" do %>
      
-        <h5 class="list-group-item-heading"><%= tweet.user.username %></h5>
+        <h5 class="list-group-item-heading"><%= tweet.user.email %></h5>
         <p class="list-group-item-text"><%= tweet.content %></p>
         <% if tweet.user == current_user %>
         <%= link_to 'Edit', edit_tweet_path(tweet) %>
-        <%= link_to 'Destroy', tweet, method: :delete, data: { confirm: 'Are you sure?' } %>
+        <%= link_to 'Delete', tweet, method: :delete, data: { confirm: 'Are you sure?' } %>
            <% end %>
           <% end %>
         <% end %>
